Fixing header for scrolling on short pages - which leaves menu always visible. Also made minor content tidy-ups.

--- a/trefechanwen/static/css/styles.css
+++ b/trefechanwen/static/css/styles.css
@@ -11,6 +11,10 @@
     justify-content: center;
 }
 
+.mdl-layout__header.is-compact {
+    max-height: 109px;
+}
+
 .mdl-mini-footer {
     padding: 0px 16px;
 }
